# Character-creator

./: README.md  api.rar  clean.py  launch.py  run_setup.bat  setup.py  skin_weights.json
FacialCreate/: FacialCreate.Build.cs  FacialCreate.rar
FacialCreate/Private/: DnaReader.cpp  FacialCreate.cpp  FbxFileLoad.cpp  FbxSdkReader.cpp  FbxSdkSceneSimulation.cpp  GetNormalAmendVertexPosition.cpp  JointGroupAdaptiveModification.cpp  OccCreate.cpp
FacialCreate/Public/: DnaReader.h  FacialCreate.h  FbxFileLoad.h  FbxSdkReader.h  FbxSdkSceneSimulation.h  GetNormalAmendVertexPosition.h  JointGroupAdaptiveModification.h  OccCreate.h
api/: CMakeLists.txt
api/cmake/: FindFBX.cmake  FindMaya.cmake
api/include/: AutoRigCreate.h  Commands.h  FbxHandle.h
api/src/: AutoRigCreate.cpp  Commands.cpp  FbxHandle.cpp  bak.cpp
api/test/: test_CharacterFactory.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
plug-ins/: CharacterFactory.mll
resources/: bge.fbx  bigear.fbx  cooper.fbx  farrukh.fbx  head_blend.fbx  skin_weights.json  trump.fbx
scripts/: build.py
scripts/config/: settings.py
scripts/maya/: plugins.py  process.py
